--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -60,49 +60,61 @@
           <ul>
             <li class="col-4 responsive">
               <div>
-                <h3>Nikon Imaging Korea</h3>
-                <p>- Renewal</p>
-                <p>- Responsive</p>
+                <a href="https://jooyeahin.github.io/nikon/">
+                  <h3>Nikon Imaging Korea</h3>
+                  <p>- Renewal</p>
+                  <p>- Responsive</p>
+                </a>
               </div>
-              <a href=""><img src="img/pic1.png" alt=""></a>
+              <a href="https://jooyeahin.github.io/nikon/"><img src="img/pic1.png" alt=""></a>
             </li>
             <li class="col-4 desktop">
               <div>
-                <h3>SK Tworld</h3>
-                <p>- Copy</p>
-                <p>- Desktop</p>
+                <a href="https://jooyeahin.github.io/Tworld/">
+                  <h3>SK Tworld</h3>
+                  <p>- Copy</p>
+                  <p>- Desktop</p>
+                </a>
               </div>
-              <a href=""><img src="img/tworld.jpg" alt=""></a>
+              <a href="https://jooyeahin.github.io/Tworld/"><img src="img/tworld.jpg" alt=""></a>
             </li>
             <li class="col-4 desktop">
               <div>
-                <h3>Allgorithmic</h3>
-                <p>- Copy</p>
-                <p>- Desktop</p>
+                <a href="https://jooyeahin.github.io/Allegorithmic/">
+                  <h3>Allgorithmic</h3>
+                  <p>- Copy</p>
+                  <p>- Desktop</p>
+                </a>
               </div>
-              <a href=""><img src="img/allegorithmic.jpg" alt=""></a>
+              <a href="https://jooyeahin.github.io/Allegorithmic/"><img src="img/allegorithmic.jpg" alt=""></a>
             </li>
             <li class="col-4 desktop">
               <div>
-                <h3>Allgorithmic</h3>
-                <p>- Copy</p>
-                <p>- Desktop</p>
+                <a href="">
+                  <h3>On the anvil</h3>
+                  <p></p>
+                  <p></p>
+                </a>
               </div>
               <a href=""><img src="img/none.png" alt=""></a>
             </li>
             <li class="col-4 desktop">
               <div>
-                <h3>Allgorithmic</h3>
-                <p>- Copy</p>
-                <p>- Desktop</p>
+                <a href="">
+                  <h3>On the anvil</h3>
+                  <p></p>
+                  <p></p>
+                </a>
               </div>
               <a href=""><img src="img/none.png" alt=""></a>
             </li>
             <li class="col-4 desktop">
               <div>
-                <h3>Allgorithmic</h3>
-                <p>- Copy</p>
-                <p>- Desktop</p>
+                <a href="">
+                  <h3>On the anvil</h3>
+                  <p></p>
+                  <p></p>
+                </a>
               </div>
               <a href=""><img src="img/none.png" alt=""></a>
             </li>
@@ -129,7 +141,8 @@
               <p>- Suwon-si, Gyeonggi-do, Republic of Korea<br>
                 - Web Designer, Publisher <br>
                 - Majored in Grame graphic Design, Hongik Univ.</p>
-              <p>Kim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo HyungKim Joo Hyung</p>
+              <p>I was interested in the UX/UI course through college curricula, and later became fascinated by the scalability and creativity of the web, so I chose Web Publisher. Currently, I am studying what I have learned in depth, and I will study back-end from now on. Because I majored in design and learned publishing, I think I can communicate perfectly with other tasks.
+              </p>
             </div>
           </li>
         </ul>
