--- a/Tworld/index.html
+++ b/Tworld/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <h1><a href="index.html"><img src="img/logo_new.png" alt="tworld-logo"></a></h1>
       <ul class="main-menu">
-        <li><a href="#">상품서비스</a></li>
+        <li><a href="tworld_service.html">상품서비스</a></li>
         <li><a href="#">다이렉트샵</a></li>
         <li><a href="#">T멤버십</a></li>
         <li><a href="#">로밍</a></li>
