--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -130,12 +130,12 @@
         <p>Joohyung Kim</p>
         <p></p>
         <ul>
-          <li class="col-5">
+          <li class="col-3">
             <div>
-              <img src="img/" alt="">
+              <img src="img/600X800 온라인.png" alt="">
             </div>
           </li>
-          <li class="col-7">
+          <li class="col-9">
             <div>
               <h3>JOOHYUNG KIM</h3>
               <p>- Suwon-si, Gyeonggi-do, Republic of Korea<br>
