--- a/Tworld/index.html
+++ b/Tworld/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/tworld.css">
-  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="js/tworld.js"></script>
 </head>
 <body>
