--- a/Tworld/tworld_service.html
+++ b/Tworld/tworld_service.html
@@ -154,14 +154,14 @@
         </div>
         <ul class="mobile-txt">
           <li>
-            <a href="">
+            <a href="#">
               <span>프리미엄 혜택을 누리는</span>
               <span><strong>파워유저</strong>입니다.</span>
               <span></span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="#">
               <span>알뜰한 생활 밀착형</span>
               <span>알뜰유저 입니다.</span>
               <span></span>
