--- a/Tworld/tworld_service.html
+++ b/Tworld/tworld_service.html
@@ -220,8 +220,8 @@
         <h2><strong>늘</strong> 데이터가<strong> 부족</strong>하신가요?</h2>
         <h3>해결방법을 알려드립니다.</h3>
         <ul>
-          <li class="click"><a href="">01 부가서비스 데이터 활용하기</a></li>
-          <li><a href="">02 놓치고 있는 혜택 이용하기</a></li>
+          <li class="click"><a href="#">01 부가서비스 데이터 활용하기</a></li>
+          <li><a href="#">02 놓치고 있는 혜택 이용하기</a></li>
         </ul>
       </div>
       <div>
