--- a/Tworld/index.html
+++ b/Tworld/index.html
@@ -16,7 +16,7 @@
       <h1><a href="index.html"><img src="img/logo_new.png" alt="tworld-logo"></a></h1>
       <ul class="main-menu">
         <li><a href="tworld_service.html">상품서비스</a></li>
-        <li><a href="#">다이렉트샵</a></li>
+        <li><a href="tworld_direct.html">다이렉트샵</a></li>
         <li><a href="#">T멤버십</a></li>
         <li><a href="#">로밍</a></li>
         <li><a href="#">혜택/이벤트</a></li>
