--- a/Tworld/tworld_service.html
+++ b/Tworld/tworld_service.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/tworld_service.css">
-  <!--  -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="js/tworld_service.js"></script>
 </head>
@@ -16,8 +15,8 @@
     <div class="wrapper">
       <h1><a href="index.html"><img src="img/logo_new.png" alt="tworld-logo"></a></h1>
       <ul class="main-menu">
-        <li><a href="tworld_service.html">상품서비스</a></li>
-        <li><a href="#">다이렉트샵</a></li>
+        <li><a href="tworld_service.html" class="click">상품서비스</a></li>
+        <li><a href="tworld_direct.html">다이렉트샵</a></li>
         <li><a href="#">T멤버십</a></li>
         <li><a href="#">로밍</a></li>
         <li><a href="#">혜택/이벤트</a></li>
@@ -286,17 +285,17 @@
               <span>혼자서 결합</span>
               <span></span>
               <div>
-                <a href="">인터넷<i></i></a>
+                <a href="#">인터넷<i></i></a>
                 <ul>
-                  <li><a href="">인터넷</a></li>
-                  <li><a href="">IPTV</a></li>
+                  <li><a href="#">인터넷</a></li>
+                  <li><a href="#">IPTV</a></li>
                 </ul>
               </div>
             </div>
             <div>
               <span>월 <strong>8,800원</strong> 할인</span>
               <span>이동전화와 인터넷을 묶으면 인터넷 기본료 8,800원 할인</span>
-              <a href="">한가족할인</a>
+              <a href="#">한가족할인</a>
             </div>
           </li>
           <li class="col-6">
@@ -304,19 +303,19 @@
               <span>가족끼리 결합</span>
               <span></span>
               <div>
-                <a href="">1회선<i></i></a>
+                <a href="#">1회선<i></i></a>
                 <ul>
-                  <li><a href="">1회선</a></li>
-                  <li><a href="">2회선</a></li>
-                  <li><a href="">3회선</a></li>
-                  <li><a href="">4회선</a></li>
+                  <li><a href="#">1회선</a></li>
+                  <li><a href="#">2회선</a></li>
+                  <li><a href="#">3회선</a></li>
+                  <li><a href="#">4회선</a></li>
                 </ul>
               </div>
             </div>
             <div>
               <span>월 <strong>11,000원</strong> 할인</span>
               <span>이동전화 월정액 3,300원 할인 + 인터넷 기본료 8,800원 할인 + <span>추가혜택</span></span>
-              <a href="">TB끼리 온가족프리</a>
+              <a href="#">TB끼리 온가족프리</a>
             </div>
           </li>
         </ul>
