--- a/Allegorithmic/index.html
+++ b/Allegorithmic/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="icon" href="img/favicon.png">
-  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/grid1.css">
   <link rel="stylesheet" href="css/Allegorithmic.css">
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/Allegorithmic.js"></script>
@@ -19,6 +19,11 @@
         <a href="index.html"><img src="img/AllegorithmicAdobeWhite_1.png" alt="Allegorithmic logo"></a>
         <span class="blind">Allegorithmic</span>
       </h1>
+      <div class="menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <ul>
         <li>
           <a href="Allegorithmic_substance.html">PRODUCTS</a>
@@ -106,121 +111,153 @@
       <h2 class="blind">news</h2>
       <div>
         <ul>
-          <li class="col-4">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 31 2019</p>
-              <p>X-TAON ART CAR TEXTURING CONTEST: RUNNERS-UP</p>
+          <li class="col-md-4 col-sm-6 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>Feburary 28 2019</p>
+                <p>PRODUCT DESIGN: FROM SUBSTANCE SOURCE TO CINEMA 4D WITH JOHN SEYMOUR</p>
+              </div>
               <div></div>
-              <a href="">
-                <img src="img/Xtaon_Runners_up_Blogpost_highlight_2000x850.jpg" alt="x-taon">
-              </a>
+              <span></span>
             </div>
           </li>
-          <li class="col-4">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 30 2019</p>
-              <p>X-TAON ART CAR TEXTURING CONTEST: AND THE WINNERS ARE...</p>
+          <li class="col-md-4 col-sm-6 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>February 27 2019</p>
+                <p>INDIAN STONE SCULPTURE - A TEXTURING STORY BY STINIVASA R. TATAMPUDI</p>
+              </div>
               <div></div>
-              <a href="">
-                <img src="img/Xtaon_results_Blogpost_highlight_2000x850_0.jpg" alt="x-taon2">
-              </a>
+              <span></span>
+            </div>
+          </li><li class="col-md-4 col-sm-6 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>Feburary 28 2019</p>
+                <p>YECHAWOOD: THE ART OF ZHELONG XU - ON SALE NOW!</p>
+              </div>
+              <div></div>
+              <span></span>
             </div>
           </li>
-          <li class="col-4">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 25 2019</p>
-              <p>SOCOM DEVIL DOG: PHOTOREALISTIC CHARACTER ART WITH LUIS <br>NIEVES</p>
+          <li class="col-md-3 col-sm-6 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>February 21 2019</p>
+                <p>PIXAR'S RENDERMAN TIMELESS ART CHALLENGE: MEET GRNAD PRIZE WINNER JEREMY SEINTZ</p>
+              </div>
               <div></div>
-              <a href="">
-                <img src="img/User_story_Luis_Nieves_Header_PC_2000x850.jpg" alt="socom devil dog">
-              </a>
+              <span></span>
             </div>
           </li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li class="col-3">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 22 2019</p>
-              <p>FROM SUBSTANCE TO CINEMA 4D: HOP INTO THE<br> CREATIVE WORLD OF FOAM STUDIO</p>
+          <li class="col-md-3 col-sm-4 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>February 20 2019</p>
+                <p>POLYCOUNT GREENTOOTH AWARDS: SUBSTANCE ELECTED BEST SOFTWARE OF 2018!</p>
+              </div>
               <div></div>
-              <a href=""><img src="img/User_story_Foam_studio_Header_PC_2000x850.jpg" alt="cinema4d"></a>
+              <span></span>
             </div>
           </li>
-          <li class="col-3">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 21 2019</p>
-              <p>SUBSTANCE IN AUTODESK VRED</p>
+          <li class="col-md-3 col-sm-4 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>Feburary 18 2019</p>
+                <p>FROM SUBSTANCE SOURCE TO UNREAL ENGINE: ARCHVIZ WITH SCIONTI DESIGN</p>
+              </div>
               <div></div>
-              <a href=""><img src="img/Integration_VRED_Blogpost_highlight_2000x850.jpg" alt=""></a>
+              <span></span>
             </div>
           </li>
-          <li class="col-3">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 16 2019</p>
-              <p>BEST OF 2018: SUBSTANCE SOURCE</p>
+          <li class="col-md-3 col-sm-4 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>Feburary 14 2019</p>
+                <p>INSIDE THE VAULT: A CONTEST WITH UNITY AND SUBSTANCE</p>
+              </div>
               <div></div>
-              <a href=""><img src="img/Best_of_2018_Source_Blogpost_highlight_2000x850.jpg" alt=""></a>
+              <span></span>
             </div>
           </li>
-          <li class="col-3">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 15 2019</p>
-              <p>FORZA HORIZON 4: CREATING SEASONS WITH<br>SUBSTANCE</p>
+          <li class="col-md-3 col-sm-6 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>Feburary 13 2019</p>
+                <p>BETWEEN MODELING AND TEXTURING: SUBSTANCE DESIGNER IN ROCKET LEAGUE</p>
+              </div>
               <div></div>
-              <a href=""><img src="img/User_story_Forza_Horizon_4_Blogpost_highlight_2000x850_5.jpg" alt=""></a>
+              <span></span>
             </div>
           </li>
-          <li class="col-3">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 10 2019</p>
-              <p>BEST OF 2018: SUBSTANCE IN ARCHVIZ</p>
+          <li class="col-md-3 col-sm-6 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>Feburary 8 2019</p>
+                <p>OUR NEXT RENDEZ-VOUS AT GDC!</p>
+              </div>
               <div></div>
-              <a href=""><img src="img/Best_of_2018_Archi_Blogpost_highlight_2000x850_5.jpg" alt="">
-              </a>
+              <span></span>
             </div>
           </li>
-          <li class="col-3">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 8 2019</p>
-              <p>BEST OF 2018: SUBSTANCE IN DESIGN</p>
+          <li class="col-md-3 col-sm-6 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p>Feburary 7 2019</p>
+                <p>SUBSTANCE SOURCE SPORTSWEAR: WINTER 2019</p>
+              </div>
               <div></div>
-              <a href=""><img src="img/Best_of_2018_Design_Header_PC_2000x850.jpg" alt=""></a>
+              <span></span>
             </div>
           </li>
-          <li class="col-3">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p>JANUARY 4 2019</p>
-              <p>BEST OF 2018: SUBSTANCE IN FILM</p>
+          <li class="col-md-3 col-sm-6 col-xs-12">
+            <div class="news-view">
+              <div>
+                <a href=""></a>
+              </div>
+              <div>
+                <p class="blind">Feburary 28 2019</p>
+                <p>MORE STORIES</p>
+              </div>
               <div></div>
-              <a href=""><img src="img/Best_of_2018_FILM_Blogpost_highlight_2000x850.jpg" alt=""></a>
-            </div>
-          </li>
-          <li class="col-3">
-            <div>
-              <div class="plus"><img src="img/plus.png" alt=""></div>
-              <p></p>
-              <p>MORE STORIES</p>
-              <div></div>
-              <a href=""><img src="img/The Allegorithmic Blog.jpg_0_0_0.jpg" alt=""></a>
+              <span></span>
             </div>
           </li>
         </ul>
       </div>
     </article>
 
-    <article class="banner">
+    <article class="banner blind">
       <div class="wrapper">
         <h2 class="blind">Allegorithmic joins the Adobe family</h2>
         <img src="img/Allegorithmic_Adobe_1+1_white.png" alt="Adobe+Allegorithmic">
@@ -234,13 +271,17 @@
     <article class="using">
       <div class="wrapper">
         <h2>THEY ARE USING SUBSTANCE</h2>
-        <a href=""><img src="img/cloud_games2.png" alt=""></a>
-        <a href=""><img src="img/cloud_film.png" alt=""></a>
+        <a href="" class="pc"><img src="img/cloud_games2.png" alt=""></a>
+        <a href="" class="pc"><img src="img/cloud_film.png" alt=""></a>
+        <a href="" class="tab"><img src="img/cloud_games_tablet.png" alt=""></a>
+        <a href="" class="tab"><img src="img/cloud_film_tablet.png" alt=""></a>
+        <a href="" class="phone"><img src="img/cloud_games_mobile.png" alt=""></a>
+        <a href="" class="phone"><img src="img/cloud_film_mobile.png" alt=""></a>
         <div>
           <ul>
-            <li class="col-4"><a href=""><img src="img/cloud_archi_mobile.png" alt=""></a></li>
-            <li class="col-4"><a href=""><img src="img/cloud_design_0.png" alt=""></a></li>
-            <li class="col-4"><a href=""><img src="img/cloud_school_0.png" alt=""></a></li>
+            <li class="col-md-4 col-sm-12 col-xs-12"><a href=""><img src="img/cloud_archi_mobile.png" alt=""></a></li>
+            <li class="col-md-4 col-sm-12 col-xs-12"><a href=""><img src="img/cloud_design_0.png" alt=""></a></li>
+            <li class="col-md-4 col-sm-12 col-xs-12"><a href=""><img src="img/cloud_school_0.png" alt=""></a></li>
           </ul>
         </div>
       </div>
