--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -84,6 +84,7 @@
                   <h3>Allgorithmic</h3>
                   <p>- Copy</p>
                   <p>- Desktop</p>
+                  <p>- Mian Page: responsive</p>
                 </a>
               </div>
               <a href="https://jooyeahin.github.io/Allegorithmic/"><img src="img/allegorithmic.jpg" alt=""></a>
@@ -263,7 +264,7 @@
         <ul>
           <li class="col-5">
             <h2>Contact Us.</h2>
-            <p>Write us an e-mail via the form, or just send us an e-mail directly at</p>
+            <p>Write me an e-mail via the form, or just send me an e-mail directly at</p>
             <a href="">jooyeahin@naver.com</a>
             <a href="">010-7114-6223</a>
             <h3>Address.</h3>
