--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -87,7 +87,7 @@
                   <p>- Mian Page: responsive</p>
                 </a>
               </div>
-              <a href="https://jooyeahin.github.io/Allegorithmic/"><img src="img/allegorithmic.jpg" alt=""></a>
+              <a href="https://jooyeahin.github.io/substance/"><img src="img/allegorithmic.jpg" alt=""></a>
             </li>
             <li class="col-4 desktop">
               <div>
