--- a/substance/index.html
+++ b/substance/index.html
@@ -27,9 +27,9 @@
             <a href="">PRODUCT<i></i></a>
             <ul>
               <li><a href="substance.html">Substance</a></li>
-              <li><a href="">Substance Painter</a></li>
-              <li><a href="">Substance Designer</a></li>
-              <li><a href="">Substance Source</a></li>
+              <li><a href="substance_painter.html">Substance Painter</a></li>
+              <li><a href="substance_designer.html">Substance Designer</a></li>
+              <li><a href="substance_source.html">Substance Source</a></li>
               <li><a href="">Substance B2M</a></li>
               <li><a href="">Substance Player</a></li>
               <li><a href="">Project Substance Alchemist</a></li>
@@ -69,9 +69,9 @@
         <li><a href="">PRODUCTS</a>
           <ul>
             <li><a href="substance.html">Substance</a></li>
-            <li><a href="">Substance Painter</a></li>
-            <li><a href="">Substance Designer</a></li>
-            <li><a href="">Substance Source</a></li>
+            <li><a href="substance_painter.html">Substance Painter</a></li>
+            <li><a href="substance_designer.html">Substance Designer</a></li>
+            <li><a href="substance_source.html">Substance Source</a></li>
             <li><a href="">Substance B2M</a></li>
             <li><a href="">Substance Player</a></li>
             <li><a href="">Project Substance Alchemist</a></li>
