--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,7 +80,7 @@
             </li>
             <li class="col-4 desktop">
               <div>
-                <a href="https://jooyeahin.github.io/Allegorithmic/">
+                <a href="https://jooyeahin.github.io/substance/">
                   <h3>Allgorithmic</h3>
                   <p>- Copy</p>
                   <p>- Desktop</p>
