--- a/ACE/admin_ace/index.html
+++ b/ACE/admin_ace/index.html
@@ -141,14 +141,14 @@ $(function(){
 				<td>19.06.17</td>
 				<td><span class="red">하드코딩 및 속성값 수정</span></td>
 			</tr>
-			<tr class="">
+			<tr class="mod">
 				<td>업체검색 팝업</td>
 				<td></td>
 				<td></td>
 				<td></td>
 				<td class="url"><a href="./html/ctm_srch.html" target="_blank">./html/ctm_srch.html</a></td>
-				<td></td>
-				<td><span class=""></span></td>
+				<td>19.11.06</td>
+				<td><span class="red">css수정</span></td>
 			</tr>
 			<tr class="">
 				<td>버튼스타일 정의 </td>
