--- a/ACE/admin_ace/index.html
+++ b/ACE/admin_ace/index.html
@@ -141,7 +141,7 @@ $(function(){
 				<td>19.06.17</td>
 				<td><span class="red">하드코딩 및 속성값 수정</span></td>
 			</tr>
-			<tr class="mod">
+			<tr class="modify">
 				<td>업체검색 팝업</td>
 				<td></td>
 				<td></td>
