--- a/nik/index.html
+++ b/nik/index.html
@@ -96,8 +96,8 @@ $(function(){
   			<td></td>
   			<td></td>
   			<td class="url"><a href="./html/images/style_guide.html" target="_blank"></a></td>
-  			<td>2019-11-06</td>
-  			<td><span class="red">퍼블리싱</span></td>
+  			<td>2018-12</td>
+  			<td><span class="red"></span></td>
   		</tr>
 			<tr class="add">
   			<td>레이아웃</td>
@@ -105,8 +105,8 @@ $(function(){
   			<td></td>
   			<td></td>
   			<td class="url"><a href="./html/images/layout_pc.html" target="_blank"></a></td>
-  			<td>2019-11-06</td>
-  			<td><span class="red">퍼블리싱</span></td>
+  			<td>2019-01</td>
+  			<td><span class="red"></span></td>
   		</tr>
 			<tr class="add">
   			<td>레이아웃</td>
@@ -114,8 +114,8 @@ $(function(){
   			<td></td>
   			<td></td>
   			<td class="url"><a href="./html/images/layout_mobile.html" target="_blank"></a></td>
-  			<td>2019-11-06</td>
-  			<td><span class="red">퍼블리싱</span></td>
+  			<td>2019-01</td>
+  			<td><span class="red"></span></td>
   		</tr>
 			<tr class="add">
   			<td>시안</td>
@@ -123,8 +123,8 @@ $(function(){
   			<td></td>
   			<td></td>
   			<td class="url"><a href="./html/images/version_pc.html" target="_blank"></a></td>
-  			<td>2019-11-06</td>
-  			<td><span class="red">퍼블리싱</span></td>
+  			<td>2019-01-14</td>
+  			<td><span class="red"></span></td>
   		</tr>
 			<tr class="add">
   			<td>시안</td>
@@ -132,8 +132,8 @@ $(function(){
   			<td></td>
   			<td></td>
   			<td class="url"><a href="./html/images/version_mobile.html" target="_blank"></a></td>
-  			<td>2019-11-06</td>
-  			<td><span class="red">퍼블리싱</span></td>
+  			<td>2019-01-14</td>
+  			<td><span class="red"></span></td>
   		</tr>
 		</tbody>
 	</table>
