--- a/hoban/html/sub/사업영역_임대사업.html
+++ b/hoban/html/sub/사업영역_임대사업.html
@@ -289,7 +289,7 @@
           </ul>
         </div>
         <div class="btn_wrap">
-          <a href="#" class="btn btn_showMore" onclick="return false">더보기 <span class="pf_listNum"></span> / <span class="pf_total"></span></a>
+          <a href="#" class="btn btn_showMore housing" onclick="return false">더보기 <span class="pf_listNum"></span> / <span class="pf_total"></span></a>
         </div>
       </div>
       <div class="cont_siteMap">
