--- a/hurom/html/sub/휴롬스토리_회사소개.html
+++ b/hurom/html/sub/휴롬스토리_회사소개.html
@@ -108,7 +108,7 @@
                 <a href="고객지원_ccm.html">고객지원</a>
                 <ul class="wide">
                   <li><a href="고객지원_ccm.html">CCM</a></li>
-                  <li><a href="고객지원_FAQ.html">FAQ</a></li>
+                  <li><a href="고객지원_faq.html">FAQ</a></li>
                   <li><a href="고객지원_매장찾기서비스센터.html">매장찾기/서비스센터</a></li>
                   <li><a href="고객지원_휴롬사용설명서레시피.html">휴롬사용설명서/레시피</a></li>
                   <li><a href="고객지원_제품등록부품및as신청.html">제품등록/부품 및 A/S신청</a></li>
