--- a/hoban/html/sub/인재채용_채용문의.html
+++ b/hoban/html/sub/인재채용_채용문의.html
@@ -310,7 +310,7 @@
           <li class="board02_cont">
             <a href="#">
               <em>채용문의</em>
-              <span>온라인 입사지원을 하였습니다. 서류전형 결과 ㅌ오보는 어떻게 하나요?</span>
+              <span>온라인 입사지원을 하였습니다. 서류전형 결과 통보는 어떻게 하나요?</span>
               <div class="board02_asw">
                 <p>접수된 지원서는 인사/총무팀에서 관리하며, 부서별로 필요 인력 요청시 해당 직무에 적합한 인재를 선발하여<br>개별적으로 연락합니다.<br>이후, 면접 등 소정 절차를 거쳐 입사가 이루어 집니다.</p>
               </div>
