--- a/hurom/html/sub/제품_휴롬원액기.html
+++ b/hurom/html/sub/제품_휴롬원액기.html
@@ -238,7 +238,7 @@
                       <span>All New Change Hurom Diva</span>
                       <strong>놀랍도록 간편해진 휴롬디바<br>그래서 매일 #휴롬이지</strong>
                       <p>
-                        사용자의 경험을 고려한<br>완전히 새로운 메커니즘으로<br>역대급 휴롬을 선보입니다.
+                        사용자의 경험을 고려한<br class="for_pc">완전히 새로운 메커니즘으로<br class="for_pc">역대급 휴롬을 선보입니다.
                       </p>
                     </div>
                     <div class="btn_box">
@@ -258,10 +258,10 @@
                     <div class="text">
                       <span>Hurom Wonder</span>
                       <strong>
-                        한 잔의 건강함을 한 번에!<br class="for_pc">맛과 건강을 한번에<br> 즐기는 휴롬원더
+                        한 잔의 건강함을 한 번에!<br class="for_pc">맛과 건강을 한번에<br class="for_pc"> 즐기는 휴롬원더
                       </strong>
                       <p>
-                        그 어느때보다 편리해진 휴롬의 새로운 모델은<br>휴롬주스에 매일 빠져들게 하는<br>새로운 경험을 제공합니다.
+                        그 어느때보다 편리해진 휴롬의 새로운 모델은<br class="for_pc">휴롬주스에 매일 빠져들게 하는<br class="for_pc">새로운 경험을 제공합니다.
                       </p>
                     </div>
                     <div class="btn_box">
@@ -296,7 +296,7 @@
                         건강한 라이프 스타일의 변화<br>휴롬 엣지로 시작하세요
                       </strong>
                       <p>
-                        작은 변화로 경험하는 더 편리하고 건강한 주스 라이프br>당신의 라이프스타일이 더욱더 세련되고 건강해집니다
+                        작은 변화로 경험하는 더 편리하고 건강한 주스 라이프<br class="for_pc">당신의 라이프스타일이 더욱더 세련되고 건강해집니다
                       </p>
                     </div>
                     <div class="btn_box">
@@ -319,7 +319,7 @@
                         주지아로의 숨결이 담긴<br>휴롬 X 주지아로 에디션
                       </strong>
                       <p>
-                        휴롬의 휴머니즘 기술과<br>인간중심 인체공학의 주지아로 디자인이 만나<br>당신을 더욱 특별하게 만들어줍니다.
+                        휴롬의 휴머니즘 기술과<br class="for_pc">인간중심 인체공학의 주지아로 디자인이 만나<br class="for_pc">당신을 더욱 특별하게 만들어줍니다.
                       </p>
                     </div>
                     <div class="btn_box">
@@ -354,7 +354,7 @@
                         시간이 지나도 변하지 않는 가치<br>휴롬 시그니처
                       </strong>
                       <p>
-                        휴롬 최고급사양의 드럼과 리얼메탈릭 소재로<br>간결하고 정제된 디자인라인으로 프리미엄만의 가치를<br>오래도록 경험하실 수 있습니다.
+                        휴롬 최고급사양의 드럼과 리얼메탈릭 소재로<br class="for_pc">간결하고 정제된 디자인라인으로 프리미엄만의 가치를<br class="for_pc">오래도록 경험하실 수 있습니다.
                       </p>
                     </div>
                     <div class="btn_box">
@@ -376,7 +376,7 @@
                         단 하나 소유하고 싶은<br>여인의 리빙 주얼리<br>휴롬 블라썸
                       </strong>
                       <p>
-                        자연의 싱그러움을 담은 소소한 일상이 빛이 납니다.<br>일상이 더욱 특별하고 건강해지는 아이디어<br>당신이 행복한 모든 순간, 휴롬 블라썸이 함께합니다
+                        자연의 싱그러움을 담은 소소한 일상이 빛이 납니다.<br class="for_pc">일상이 더욱 특별하고 건강해지는 아이디어<br class="for_pc">당신이 행복한 모든 순간, 휴롬 블라썸이 함께합니다.
                       </p>
                     </div>
                     <div class="btn_box">
@@ -410,7 +410,7 @@
                         세계에서 인정받은 디자인<br>전문가를 위해 더 강력해지다
                       </strong>
                       <p>
-                        세계 디자인어워드인 Reddot, iF에서 수상한 디자인과<br>안전하고 강한소재, 더 큰 용량 등 비즈니스 파트너를 위해<br>휴롬만의 노하우를 담았습니다.
+                        세계 디자인어워드인 Reddot, iF에서 수상한 디자인과<br class="for_pc">안전하고 강한소재, 더 큰 용량 등 비즈니스 파트너를 위해<br class="for_pc">휴롬만의 노하우를 담았습니다.
                       </p>
                     </div>
                     <div class="btn_box">
@@ -464,7 +464,7 @@
                         고급스러움을 더한 휴롬셀럽<br>건강주스 문화를 만들다
                       </strong>
                       <p>
-                        휴롬 착즙기의 업그레이드된 핵심기술력에 고급스러운 디자인을 더해<br>건강한 라이프스타일을 제안합니다.
+                        휴롬 착즙기의 업그레이드된 핵심기술력에 고급스러운 디자인을 더해<br class="for_pc">건강한 라이프스타일을 제안합니다.
                       </p>
                     </div>
                     <div class="btn_box">
@@ -485,7 +485,7 @@
                         2배 더 천천히 짜니까<br>더 신선한 2세대 휴롬
                       </strong>
                       <p>
-                        2세대 휴롬은 스크류 회전수를 2배로 줄여 더 천천히 눌러 짜기 때문에<br>자연에 더 가까운 재료본연의 신선한 주스를 만들 수 있습니다.
+                        2세대 휴롬은 스크류 회전수를 2배로 줄여 더 천천히 눌러 짜기 때문에<br class="for_pc">자연에 더 가까운 재료본연의 신선한 주스를 만들 수 있습니다.
                       </p>
                     </div>
                     <div class="btn_box">
@@ -518,7 +518,7 @@
                         자연의 영양 그대로<br>1세대 휴롬
                       </strong>
                       <p>
-                        재료를 지그시 눌러 짜는 방식의 기본구성으로 과일뿐만 아니라<br>채소, 견과류까지 착즙할 수 있어 나만의 맞춤 천연주스를 만들 수 있습니다.
+                        재료를 지그시 눌러 짜는 방식의 기본구성으로 과일뿐만 아니라<br class="for_pc">채소, 견과류까지 착즙할 수 있어 나만의 맞춤 천연주스를 만들 수 있습니다.
                       </p>
                     </div>
                     <div class="btn_box">
