--- a/hurom/html/sub/제품_휴롬원액기.html
+++ b/hurom/html/sub/제품_휴롬원액기.html
@@ -296,7 +296,7 @@
                         건강한 라이프 스타일의 변화<br>휴롬 엣지로 시작하세요
                       </strong>
                       <p>
-                        작은 변화로 경험하는 더 편리하고 건강한 주스 라이프<br class="for_pc">당신의 라이프스타일이 더욱더 세련되고 건강해집니다
+                        작은 변화로 경험하는 더 편리하고 건강한 주스 라이프<br class="for_pc">당신의 라이프스타일이 더욱더 세련되고 건강해집니다.
                       </p>
                     </div>
                     <div class="btn_box">
