--- a/hurom/html/sub/제품_휴롬스퀴저.html
+++ b/hurom/html/sub/제품_휴롬스퀴저.html
@@ -94,7 +94,7 @@
               <ul>
                 <li><a href="제품_휴롬원액기.html">휴롬원액기</a></li>
                 <li><a href="제품_휴롬블렌더.html">휴롬블렌더</a></li>
-                <li><a href="제품_휴티마스터.html">휴롬티마스터</a></li>
+                <li><a href="제품_휴롬티마스터.html">휴롬티마스터</a></li>
                 <li><a href="제품_휴롬셰프.html">휴롬셰프</a></li>
                 <li><a href="제품_휴롬스퀴저.html">휴롬스퀴저</a></li>
                 <li><a href="제품_휴롬쿡마스터.html">휴롬쿡마스터</a></li>
